<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.ont.connector.view.ArcTitleView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:name="@string/import_ont_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/import_wif"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_key"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_card"
            android:gravity="start"
            android:hint="@string/please_paste_your_private_key_wif_format_here"
            android:padding="15dp"
            android:scrollbars="vertical"
            android:textColor="@color/grey_6E6F70"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:drawableLeft="@drawable/notice"
            android:drawablePadding="9dp"
            android:text="@string/what_wif"
            android:textColor="@color/green_196BD8"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:text="@string/ont_id_password"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/et_back"
            android:hint="@string/digits"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="23dp"
            android:text="@string/confirm_password"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/et_back"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/layout_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/ck_agree_service"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    android:clickable="false"
                    android:gravity="center_vertical" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_agree_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="66dp"
            android:layout_marginRight="58dp"
            android:layout_marginBottom="40dp"
            android:background="@color/grey_9B9B9B"
            android:gravity="center"
            android:text="@string/import1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>