<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <com.github.ont.connector.view.ArcTitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/export_ontid" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/wif_info"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_wif"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorF3F3F3"
        android:padding="15dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_wif_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/notice"
        android:drawablePadding="10dp"
        android:text="@string/what_is_private_key_wif_format"
        android:textColor="@color/green_196BD8" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorBlack"
        android:gravity="center"
        android:text="@string/copy"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>